<resources>
    <string name="app_name">生活</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">生活</string>
    <string name="drawer_open">设置</string>
    <string name="drawer_close">主页</string>
    <string name="turn_themes">切换主题</string>
    <string name="nav_attention">关注</string>
    <string name="nav_collect">收藏</string>
    <string name="app_exit">退出</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="btn_come">进入</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_home_page_newmood">动态</string>
    <string name="fragment_home_page_recommend">推荐</string>
    <string name="fragment_home_page_love">喜欢</string>
    <string name="title_activity_regest">注册</string>
    <string name="indexactivity_user_name">用户名</string>
    <string name="btn_cancel_login">注销</string>
    <!--动态fragment-->
    <string name="dynamic_textview">用户名</string>
    <string name="dynamic_button">关注</string>
    <string name="dynamic_textview_listview">热度</string>
    <string name="dynamic_comment_listview">评论</string>
    <string name="dynamic_collection_listview">收藏</string>
    <string name="dynamic_love_listview">喜欢</string>

    <!--           personal           -->
    <string name="personal_login_btn">登录</string>
    <string name="username_hint">邮箱</string>
    <string name="password_hint">密码</string>
    <string name="personal_login_tv_text">未登录</string>
    <string name="personal_tv_mymessage">喜欢</string>
    <string name="personal_login_tv_recommend">评论</string>
    <string name="personal_login_tv_note">收藏</string>
    <string name="personal_login_tv_friend">分享</string>
    <string name="title_activity_login">登录</string>
    <string name="personal_login_tv_regest">新用户</string>
    <string name="personal_login_tv_forget">忘记密码</string>

    <drawable name="color_normal">#fff</drawable>
    <drawable name="color_press">#B8B8B8</drawable>

    <!--Text of regest page-->
    <string name="regest_tv_text_title">REGISTER</string>
    <string name="regest_et_hint_username">用户名</string>
    <string name="regest_et_hint_password">密码</string>
    <string name="regest_et_hint_repassword">重复密码</string>
    <string name="regest_et_hint_email">电子邮箱</string>
    <string name="regest_et_hint_checkemail">邮箱验证码</string>
    <string name="regest_btn_sent_checkemail">获取验证码</string>
    <string name="regest_btn_regest">注册</string>
    <string name="regest_btn_reset">重置</string>
    <string name="regest_tv_prompt">注：请正确填写邮箱内容，用于找回密码！</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose_head_picture">头像</string>
    <string name="activity_choose_picture">确定</string>


    <!-- 错误提示信息-->
    <string name="password_error">密码不相同，请重新输入</string>
    <string name="email_error">邮箱格式不正确，请重新输入</string>
    <string name="validate_error">验证码不正确，请重新输入</string>
    <string name="runtime_error">运行时错误</string>
    <string name="please_register">没有该账号，请注册</string>
    <string name="network_error">没有该账号，请注册</string>
    <string name="send_password_email">已经发送密码到邮箱，请查收</string>
    <string name="article_info_error">文章内容为空</string>
    <string name="article_data_error">上传错误</string>
    <string name="article_network_error">没有网络哦！</string>
    <string name="input_not_null">输入信息不能为空哦</string>
    <string name="comment_not_null">评论内容不能为空哦</string>

    <!-- 提示信息-->
    <string name="two_click_exit">双击退出</string>
    <string name="attention_success">关注成功</string>
    <string name="attention_fail">关注失败</string>
    <string name="comment_null">关注失败</string>
    <string name="login">登陆</string>
    <string name="logining">正在登陆</string>
    <string name="register">注册</string>
    <string name="registering">正在校验</string>
    <string name="attention">关注</string>
    <string name="reset_attention">已关注</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_fail">评论失败</string>

    <!--Message Page-->
    <string name="messagepage_mycollection">我的收藏</string>
    <string name="messagepage_comment">我的评论</string>
    <string name="messagepage_love">我的喜欢</string>
    <string name="messagepage_share">我的分享</string>
    <string name="messagepage_drafts">我的草稿</string>
    <string name="messagepage_gallery">我的相册</string>


    <!--Activity 我的动态-->
    <string name="title_activity_my_dynamic">我的动态</string>


    <!--MyCollection Activity 我的收藏-->
    <string name="title_activity_my_collection">我的收藏</string>

    <!--布局展示内容（写死的，就是给你看布局效果的）-->
    <!-- 我fuck-->
    <style name="collection_username">王豪</style>

    <style name="collection_publishtime">2015-11-24</style>

    <style name="collection_content">
        人生在世，高潮时享受成就，低谷时享受人生。机制不对，好人受累；流程不对，努力白费。遇顺境，处之淡然；遇逆境，处之泰然。人生如果走错了方向，止步就是进步。
    </style>


    <!--Pupopwindow button text-->
    <string name="popupwindow_btn_takephoto">拍照</string>
    <string name="popupwindow_btn_richscan">扫一扫</string>
    <string name="popupwindow_btn_writedynamic">写动态</string>
    <string name="popupwindow_btn_writenote">写便签</string>


    <string name="title_activity_retrieve_password">找回密码</string>
    <!--title_activity_write_dynamic-->
    <string name="title_activity_write_dynamic">动态</string>
    <string name="et_write_dynamic">心情........</string>
    <string name="btn_send_dynamic">发送</string>

    <!--title_activty_write_note-->
    <string name="title_activity_write_notectivity">便签</string>

    <string name="activity_retrieve_input_email">输入邮箱</string>
    <string name="activity_retrieve_send_email">发送</string>
    <string name="activity_retrieve_empty_input">请输入信息</string>
    <string name="activity_retrieve_password_to_email">发送密码到你的邮箱</string>

    <drawable name="pop_btn_color_normal">#8EE5EE</drawable>
    <drawable name="pop_btn_color_press">#B8B8B8</drawable>
    <string name="title_activity_update_user_information">设置</string>
    <string name="title_activity_seetting">设置</string>
    <string name="title_activity_drafts">草稿箱</string>

    <string name="scrollview_writenote_edittext_title">标题</string>
    <string name="scrollview_writenote_edittext">点击此处编写内容……</string>
    <string name="button_writenote_add">完成</string>

    <!-- 设置界面-->
    <string name="setting_app_voice">声音提示</string>
    <string name="setting_app_vibration">震动提示</string>
    <string name="setting_app_exitNoRmind">退出后不提醒</string>
    <string name="setting_app_clearCache">清理缓存</string>
    <string name="setting_app_checkUp">检查新版本</string>
    <string name="setting_app_opinion">意见反馈</string>
    <string name="setting_app_about">关于应用</string>
    <string name="setting_app_exit">退出</string>
    <string name="setting_app_cache_size">退出</string>

    <string name="setting_userinfo_headImg">头像</string>
    <string name="setting_userinfo_name">昵称</string>
    <string name="setting_userinfo_email">电子邮箱</string>
    <string name="setting_userinfo_phonenumber">电话号码</string>
    <string name="setting_userinfo_modifypassword">修改密码</string>
    <string name="setting_userinfo_joindate">加入时间</string>
    <string name="setting_userinfo_sex">性别</string>
    <string name="setting_userinfo_city">城市</string>
    <string name="title_activity_Capture">扫描二维码</string>


    <string name="write_dynamic_title">上传</string>
    <string name="write_dynamic_message">文章正在上传</string>
    <string name="title_activity_user_home_page">UserHomePageActivity</string>

    <string name="title_activity_comment">CommentActivity</string>
    <string name="comment_edittext">评论</string>
    <string name="send_comment">发送</string>
    <string name="share">分享</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="no_login">你还未登录哦</string>
    <string name="title_activity_gallery">GalleryActivity</string>

</resources>
