<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/nav_index"
        android:icon="@drawable/own"
        android:title="@string/drawer_close" />

    <item
        android:id="@+id/nav_attention"
        android:icon="@drawable/important"
        android:title="@string/nav_collect" />


    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/changestyle"
        android:title="@string/turn_themes" />

    <item
        android:id="@+id/sub_setting"
        android:icon="@drawable/settings"
        android:title="@string/drawer_open" />

    <item
        android:id="@+id/sub_exit"
        android:icon="@drawable/exit"
        android:title="@string/app_exit" />

</menu>
