<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.jiangtao.fragment.UserInfoSettingFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/setting_userinfo_headImg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/aaaaaa" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_userinfo_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_userinfo_sex" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_userinfo_city" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_userinfo_phonenumber" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_userinfo_joindate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_userinfo_modifypassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B8B8B8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:clickable="true"
        android:background="@drawable/tvonclickstyle_selector"
        android:text="@string/setting_app_exit" />

</LinearLayout>
