<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_listview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


        <TextView
            android:id="@+id/dynamic_textview_userName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image_listview"
            android:gravity="center_vertical"
            android:text="@string/dynamic_textview" />

        <Button
            android:id="@+id/dynamic_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:text="@string/dynamic_button" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dynamic_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/dynamic_article_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/LightSteelBlue"
        android:gravity="bottom"
        android:showDividers="end"
        android:weightSum="4">

        <TextView
            android:id="@+id/dynamic_textview_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/dynamic_textview_listview"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dynamic_comment_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/dynamic_comment_listview"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dynamic_collection_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/dynamic_collection_listview"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dynamic_love_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableLeft="@drawable/love"
            android:gravity="right"
            android:text="@string/dynamic_love_listview"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>