<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/pup_btn_takephoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/popuwindow_button_onclickstyle_selector"
            android:drawableLeft="@drawable/iconcamera"
            android:text="@string/popupwindow_btn_takephoto" />

        <Button
            android:id="@+id/pup_btn_richscan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/popuwindow_button_onclickstyle_selector"
            android:drawableLeft="@drawable/scan"
            android:gravity="center"
            android:text="@string/popupwindow_btn_richscan" />

        <Button
            android:id="@+id/pup_btn_writedynamic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/popuwindow_button_onclickstyle_selector"
            android:drawableLeft="@drawable/write"
            android:text="@string/popupwindow_btn_writedynamic" />

        <Button
            android:id="@+id/pup_btn_writenote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/popuwindow_button_onclickstyle_selector"
            android:drawableLeft="@drawable/writenote"
            android:text="@string/popupwindow_btn_writenote" />
    </LinearLayout>
</LinearLayout>
