<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="16dp"
              android:orientation="vertical"
              tools:context="org.jiangtao.fragment.AppSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B8B8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_app_vocie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/setting_app_voice"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_app_vibration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/setting_app_vibration"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_app_exitNoRmind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/setting_app_exitNoRmind"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B8B8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tvonclickstyle_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/setting_app_checkUp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B8B8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/ll_clear_cache"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:background="@drawable/tvonclickstyle_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="appSettingOnClick"
                android:paddingLeft="16dp"
                android:text="@string/setting_app_clearCache"/>

            <TextView
                android:id="@+id/setting_app_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/tvonclickstyle_selector"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B8B8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tvonclickstyle_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/setting_app_opinion"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B8B8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tvonclickstyle_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/setting_app_about"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B8B8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tvonclickstyle_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/setting_app_exit"/>

    </LinearLayout>


</LinearLayout>
